
ElasticSearch-Carrot2 Change Log

================ ElasticSearch-Carrot2 2.0.0 ================

Changes in Backwards Compatibility

* GH-23: Plugin code restructured for ES 2.0.0. Versioning
  scheme will now follow ElasticSearch strictly since starting
  from version 2.0.0 plugins must declare an (exact) version
  of ES they were compiled against.

Other changes

* GH-24: Update JS visualizations in plugin documentation.

================ ElasticSearch-Carrot2 1.9.1 ================

Changes in Backwards Compatibility

* Dependency update to Carrot2 3.10.4 (and Lingo3G 1.12.3).

================ ElasticSearch-Carrot2 1.9.0 ================

Changes in Backwards Compatibility

* Dependency update to ES 1.6.0.

* Dependency update to Carrot2 3.10.1 (and Lingo3G 1.12.0).

* Dependency updates (test libraries).

================ ElasticSearch-Carrot2 1.8.0 ================

Changes in Backwards Compatibility

* Dependency update to ES 1.4.0.

Other changes

* Dropped support branch for ES 1.1.x.

================ ElasticSearch-Carrot2 1.7.0 ================

Changes in Backwards Compatibility

* Dependency update to ES 1.3.0.

================ ElasticSearch-Carrot2 1.6.1 ================

Changes in Backwards Compatibility

* Dependency update to ES 1.2.2.

* Dependency update to Carrot2 3.9.3 (and Lingo3G 1.10.0)

* Demo visualizations updated to their newest version.

================ ElasticSearch-Carrot2 1.6.0 ================

Changes in Backwards Compatibility

* Compatibility update to ES 1.2.0.

================ ElasticSearch-Carrot2 1.5.0 ================

Changes in Backwards Compatibility

* Compatibility upgrade to Carrot2 3.9.2 and Lingo3G 1.9.1.

================ ElasticSearch-Carrot2 1.4.0 ================

Changes in Backwards Compatibility

* Compatibility upgrade to Carrot2 3.9.0 and Lingo3G 1.9.0.

* include_hits parameter is now deprecated in favor of setting 
  max_hits to 0. include_hits = false will act as an alias of
  setting max_hits to 0.
