@@ -1,0 +1,20 @@
+
+#
+# The main "algorithm suite" definition file.
+#
+suite: algorithms/suite.xml
+
+#
+# Path to lexical resources (when required by algorithms).
+#
+resources: resources
+
+#
+# Size of the internal pool of algorithm instances. 
+# This pool is sized automatically depending on the 
+# configuration of the search threadpool in ElasticSearch. 
+#
+# If too many resources are consumed, the pool can be 
+# set to a fixed size using this option.
+#
+# controller.pool-size: 8
